Added font awesome

--- a/adam-thomas.html
+++ b/adam-thomas.html
@@ -18,7 +18,7 @@
     <hr>
 
     <ul>
-        <li><i class="fa-brands fa-github"></i> <a href="https://github.com/codeadamca">codeadamca</a></li>
+        <li><i class="fab fa-github"></i> <a href="https://github.com/codeadamca">codeadamca</a></li>
     </ul>
     
 </body>
