--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Web Development Instructors</h2>
 
     <ul>
-        <li><a href="/adam-thomas">Adam Thomas</a></li>
+        <li><a href="adam-thomas">Adam Thomas</a></li>
     </ul>
     
 </body>
