--- a/adam-thomas.html
+++ b/adam-thomas.html
@@ -19,8 +19,8 @@
 
     <ul>
         <li><i class="fab fa-github"></i> <a href="https://github.com/codeadamca">GitHub</a></li>
-        <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/codeadamca/"></a>Instagram</a></li>
-        <li><i class="fab fa-youtube"></i> <a href="https://www.youtube.com/channel/UCvn-c8MnpjythwWKDi5qMvA"></a>YouTube</a></li>
+        <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/codeadamca/">Instagram</a></li>
+        <li><i class="fab fa-youtube"></i> <a href="https://www.youtube.com/channel/UCvn-c8MnpjythwWKDi5qMvA">YouTube</a></li>
     </ul>
     
 </body>
