--- a/adam-thomas-2.html
+++ b/adam-thomas-2.html
@@ -4,25 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Development Portfolio List</title>
+    <title>Adam Thomas</title>
 
     <script src="https://kit.fontawesome.com/57a8a8c892.js" crossorigin="anonymous"></script>
-    
+
 </head>
 <body>
 
-    <h1>Web Development Portfolio List</h1>
+    <h1>Adam Thomas</h1>
 
-    <h2>Web Development Instructors</h2>
-
-    <ul>
-        <li><a href="adam-thomas">Adam Thomas</a></li>
-        <li><a href="adam-thomas-2">Adam Thomas 2</a></li>
-    </ul>
+    <img src="https://avatars.githubusercontent.com/u/98908062?v=4">
 
     <hr>
 
-
-
+    <ul>
+        <li><i class="fab fa-github"></i> <a href="https://github.com/thomasadam83">GitHub</a></li>
+    </ul>
+    
 </body>
 </html>
