Added more content to profile

--- a/adam-thomas-2.html
+++ b/adam-thomas-2.html
@@ -20,6 +20,8 @@
     <ul>
         <li><i class="fab fa-github"></i> <a href="https://github.com/thomasadam83">GitHub</a></li>
     </ul>
+
+    <p>Added some more content...</p>
     
 </body>
 </html>
