--- a/thomas.html
+++ b/thomas.html
@@ -14,6 +14,8 @@
     <h1>Thomas</h1>
 
     <hr>
+    
+    <p>Testing a new change...</p>
 
     <ul>
         <li><i class="fab fa-github"></i> <a href="https://github.com/thomasadam83">GitHub</a></li>
