--- a/thomas-ben.html
+++ b/thomas-ben.html
@@ -4,24 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam Thomas</title>
+    <title>Thomas Ben</title>
 
     <script src="https://kit.fontawesome.com/57a8a8c892.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
 
-    <h1>Adam Thomas</h1>
-
-    <img src="https://avatars.githubusercontent.com/u/98908062?v=4">
+    <h1>Thomas Ben</h1>
 
     <hr>
 
     <ul>
         <li><i class="fab fa-github"></i> <a href="https://github.com/thomasadam83">GitHub</a></li>
     </ul>
-
-    <p>Added some more content...</p>
     
 </body>
 </html>
