--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="adam-thomas-2">Adam Thomas 2</a></li>
         <li><a href="yujia-wang">Yujia Wang</a></li>
         <li><a href="thomas">Thomas</a></li>
+        <li><a href="william">William</a></li>
     </ul>
 
     <hr>
