--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="adam-thomas">Adam Thomas</a></li>
         <li><a href="adam-thomas-2">Adam Thomas 2</a></li>
         <li><a href="yujia-wang">Yujia Wang</a></li>
+        <li><a href="simon-chung">Simon Chung</a></li>
         <li><a href="thomas">Thomas</a></li>
     </ul>
 
