--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="adam-thomas">Adam Thomas</a></li>
         <li><a href="thomas-ben">Thomas Ben</a></li>
         <li><a href="yujia-wang">Yujia Wang</a></li>
+        <li><a href="dhaval-shah">Dhaval Shah</a></li>
     </ul>
 
     <hr>
